<resources>
    <string name="app_name">Cash Farm</string>
    <string name="shop">Shop  </string>
    <string name="cost">cost: </string>
    <string name="cash">Cash:</string>
    <string name="cpc">Cash per click:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sound_setting">Sound On/Off</string>
    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="show_notification">Show notification  </string>

    <string-array name="shop_array">
        <item>Cash per Click</item>
        <item>Hot Dog Stand</item>
        <item>Small Shop</item>
        <item>Sales manager</item>
        <item>Shop</item>
        <item>Brand Name</item>
        <item>Shopping Mall</item>
    </string-array>

    <string name="cashPerClick">Cash per Click</string>
    <string name="hotDogStand">Hot Dog Stand</string>
    <string name="smallShop">Small Shop</string>
    <string name="salesManager">Sales manager</string>
    <string name="bradName">Brand Name</string>
    <string name="shoppingMall">Shopping Mall</string>


    <string name="total_clicks"></string>
    <string name="damage_up"></string>
    <string name="cps">Cash per second:</string>
    <string name="title_activity_achievement">AchievementActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>


    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">553815884552-93oahappighnvn5la353u3kcc1ej9dbe.apps.googleusercontent.com</string>
    <string name="title_activity_custom_adapter">CustomAdapter</string>
    <string name="title_activity_custom_list_view_android_example">CustomListViewAndroidExample
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="achievement">Achievement</string>
    <string name="statistics">Statistics</string>
    <string name="screenshot">Share Screenshot</string>
    <string name="send">Send</string>

    <string name="owned">Owned: </string>

</resources>
