<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_achievements"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/achievement" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/statistics" />

    </group>

    <item android:title="Social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/screenshot" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
